fixed spacing of Links

--- a/style.css
+++ b/style.css
@@ -152,8 +152,8 @@ h4 {
     padding: 5px;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
     display: inline-block;
 }
 
@@ -162,8 +162,8 @@ h4 {
     padding: 5px;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
     display: inline-block;
 }
 
@@ -172,8 +172,8 @@ h4 {
     padding: 5px;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
     display: inline-block;
 }
 
@@ -182,8 +182,8 @@ h4 {
     padding: 5px;
     margin-top: 1em;
     margin-bottom: 1em;
-    margin-left: 2em;
-    margin-right: 2em;
+    margin-left: 1em;
+    margin-right: 1em;
     display: inline-block;
 }
 
